src/parser.output
Terminals unused in grammar

    COLON


State 133 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: root_program

    2 root_program: external_declaration
    3             | root_program external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: type_specifier NAME T_LBRACKET T_RBRACKET compound_statement
    7                    | type_specifier NAME T_LBRACKET parameter_list T_RBRACKET compound_statement

    8 initialisation_declarator: declarator
    9                          | NAME T_ASSIGN assignment_expression

   10 declaration_list: declaration
   11                 | declaration_list declaration

   12 declarator: NAME
   13           | NAME SQU_LBRACKET add_expression SQU_RBRACKET

   14 declaration: type_specifier SEMICOLON
   15            | type_specifier initialisation_declarator SEMICOLON

   16 parameter_declaration: type_specifier declarator

   17 parameter_list: parameter_declaration
   18               | parameter_list COMMA parameter_declaration

   19 function_call_arguments: NUMBER
   20                        | function_call_arguments COMMA NUMBER

   21 primary_expression: NUMBER
   22                   | NAME
   23                   | NAME SQU_LBRACKET expression SQU_RBRACKET
   24                   | T_LBRACKET expression T_RBRACKET
   25                   | NAME T_LBRACKET T_RBRACKET
   26                   | NAME T_LBRACKET function_call_arguments T_RBRACKET

   27 postfix_expression: primary_expression
   28                   | postfix_expression INC_OP

   29 add_expression: multiply_expression
   30               | add_expression T_PLUS multiply_expression
   31               | add_expression T_MINUS multiply_expression

   32 multiply_expression: postfix_expression
   33                    | multiply_expression T_TIMES postfix_expression
   34                    | multiply_expression T_DIVIDE postfix_expression

   35 shift_expression: add_expression
   36                 | shift_expression T_LEFT_SHIFT add_expression
   37                 | shift_expression T_RIGHT_SHIFT add_expression

   38 compare_expression: shift_expression
   39                   | compare_expression T_LESSTHAN shift_expression
   40                   | compare_expression T_LESS_EQUAL shift_expression
   41                   | compare_expression T_GREATERTHAN shift_expression
   42                   | compare_expression T_GREATER_EQUAL shift_expression

   43 equal_expression: compare_expression
   44                 | equal_expression T_EQUAL compare_expression
   45                 | equal_expression T_NOT_EQUAL compare_expression

   46 bitwise_expression: equal_expression
   47                   | bitwise_expression T_BIT_AND equal_expression
   48                   | bitwise_expression T_BIT_OR equal_expression
   49                   | bitwise_expression T_BIT_XOR equal_expression

   50 logical_expression: bitwise_expression
   51                   | logical_expression T_LOGICAL_AND bitwise_expression
   52                   | logical_expression T_LOGICAL_OR bitwise_expression

   53 assignment_expression: logical_expression
   54                      | postfix_expression T_ASSIGN assignment_expression

   55 expression: assignment_expression

   56 statement: jump_statement
   57          | compound_statement
   58          | expression_statement
   59          | condition_statement
   60          | iteration_statement

   61 statement_list: statement
   62               | statement_list statement

   63 compound_statement: CUR_LBRACKET CUR_RBRACKET
   64                   | CUR_LBRACKET statement_list CUR_RBRACKET
   65                   | CUR_LBRACKET declaration_list CUR_RBRACKET
   66                   | CUR_LBRACKET declaration_list statement_list CUR_RBRACKET

   67 jump_statement: T_RETURN SEMICOLON
   68               | T_RETURN expression SEMICOLON

   69 expression_statement: expression SEMICOLON

   70 condition_statement: T_IF T_LBRACKET expression T_RBRACKET statement
   71                    | T_IF T_LBRACKET expression T_RBRACKET statement T_ELSE statement

   72 iteration_statement: T_WHILE T_LBRACKET expression T_RBRACKET statement
   73                    | T_FOR T_LBRACKET expression_statement expression_statement T_RBRACKET statement
   74                    | T_FOR T_LBRACKET expression_statement expression_statement expression T_RBRACKET statement

   75 type_specifier: T_INT
   76               | T_UNSIGNED


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_ASSIGN (258) 9 54
    T_TIMES (259) 33
    T_DIVIDE (260) 34
    T_PLUS (261) 30
    T_MINUS (262) 31
    T_BIT_AND (263) 47
    T_BIT_OR (264) 48
    T_BIT_XOR (265) 49
    T_LOGICAL_OR (266) 52
    T_LOGICAL_AND (267) 51
    T_RIGHT_SHIFT (268) 37
    T_LEFT_SHIFT (269) 36
    T_LBRACKET (270) 6 7 24 25 26 70 71 72 73 74
    T_RBRACKET (271) 6 7 24 25 26 70 71 72 73 74
    CUR_LBRACKET (272) 63 64 65 66
    CUR_RBRACKET (273) 63 64 65 66
    SQU_LBRACKET (274) 13 23
    SQU_RBRACKET (275) 13 23
    COLON (276)
    SEMICOLON (277) 14 15 67 68 69
    COMMA (278) 18 20
    T_LESSTHAN (279) 39
    T_GREATERTHAN (280) 41
    T_LESS_EQUAL (281) 40
    T_GREATER_EQUAL (282) 42
    T_EQUAL (283) 44
    T_NOT_EQUAL (284) 45
    T_INT (285) 75
    T_UNSIGNED (286) 76
    T_IF (287) 70 71
    T_ELSE (288) 71
    T_WHILE (289) 72
    T_RETURN (290) 67 68
    T_FOR (291) 73 74
    INC_OP (292) 28
    NAME <string> (293) 6 7 9 12 13 22 23 25 26
    NUMBER <number> (294) 19 20 21


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    ROOT (41)
        on left: 1
        on right: 0
    root_program <NodePtr> (42)
        on left: 2 3
        on right: 1 3
    external_declaration <NodePtr> (43)
        on left: 4 5
        on right: 2 3
    function_definition <NodePtr> (44)
        on left: 6 7
        on right: 4
    initialisation_declarator <NodePtr> (45)
        on left: 8 9
        on right: 15
    declaration_list <NodeVectorPtr> (46)
        on left: 10 11
        on right: 11 65 66
    declarator <NodePtr> (47)
        on left: 12 13
        on right: 8 16
    declaration <NodePtr> (48)
        on left: 14 15
        on right: 5 10 11
    parameter_declaration <NodePtr> (49)
        on left: 16
        on right: 17 18
    parameter_list <NodeVectorPtr> (50)
        on left: 17 18
        on right: 7 18
    function_call_arguments <IntVectorPtr> (51)
        on left: 19 20
        on right: 20 26
    primary_expression <NodePtr> (52)
        on left: 21 22 23 24 25 26
        on right: 27
    postfix_expression <NodePtr> (53)
        on left: 27 28
        on right: 28 32 33 34 54
    add_expression <NodePtr> (54)
        on left: 29 30 31
        on right: 13 30 31 35 36 37
    multiply_expression <NodePtr> (55)
        on left: 32 33 34
        on right: 29 30 31 33 34
    shift_expression <NodePtr> (56)
        on left: 35 36 37
        on right: 36 37 38 39 40 41 42
    compare_expression <NodePtr> (57)
        on left: 38 39 40 41 42
        on right: 39 40 41 42 43 44 45
    equal_expression <NodePtr> (58)
        on left: 43 44 45
        on right: 44 45 46 47 48 49
    bitwise_expression <NodePtr> (59)
        on left: 46 47 48 49
        on right: 47 48 49 50 51 52
    logical_expression <NodePtr> (60)
        on left: 50 51 52
        on right: 51 52 53
    assignment_expression <NodePtr> (61)
        on left: 53 54
        on right: 9 54 55
    expression <NodePtr> (62)
        on left: 55
        on right: 23 24 68 69 70 71 72 74
    statement <NodePtr> (63)
        on left: 56 57 58 59 60
        on right: 61 62 70 71 72 73 74
    statement_list <NodeVectorPtr> (64)
        on left: 61 62
        on right: 62 64 66
    compound_statement <NodePtr> (65)
        on left: 63 64 65 66
        on right: 6 7 57
    jump_statement <NodePtr> (66)
        on left: 67 68
        on right: 56
    expression_statement <NodePtr> (67)
        on left: 69
        on right: 58 73 74
    condition_statement <NodePtr> (68)
        on left: 70 71
        on right: 59
    iteration_statement <NodePtr> (69)
        on left: 72 73 74
        on right: 60
    type_specifier <string> (70)
        on left: 75 76
        on right: 6 7 14 15 16


State 0

    0 $accept: . ROOT $end

    T_INT       shift, and go to state 1
    T_UNSIGNED  shift, and go to state 2

    ROOT                  go to state 3
    root_program          go to state 4
    external_declaration  go to state 5
    function_definition   go to state 6
    declaration           go to state 7
    type_specifier        go to state 8


State 1

   75 type_specifier: T_INT .

    $default  reduce using rule 75 (type_specifier)


State 2

   76 type_specifier: T_UNSIGNED .

    $default  reduce using rule 76 (type_specifier)


State 3

    0 $accept: ROOT . $end

    $end  shift, and go to state 9


State 4

    1 ROOT: root_program .
    3 root_program: root_program . external_declaration

    T_INT       shift, and go to state 1
    T_UNSIGNED  shift, and go to state 2

    $default  reduce using rule 1 (ROOT)

    external_declaration  go to state 10
    function_definition   go to state 6
    declaration           go to state 7
    type_specifier        go to state 8


State 5

    2 root_program: external_declaration .

    $default  reduce using rule 2 (root_program)


State 6

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 7

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


State 8

    6 function_definition: type_specifier . NAME T_LBRACKET T_RBRACKET compound_statement
    7                    | type_specifier . NAME T_LBRACKET parameter_list T_RBRACKET compound_statement
   14 declaration: type_specifier . SEMICOLON
   15            | type_specifier . initialisation_declarator SEMICOLON

    SEMICOLON  shift, and go to state 11
    NAME       shift, and go to state 12

    initialisation_declarator  go to state 13
    declarator                 go to state 14


State 9

    0 $accept: ROOT $end .

    $default  accept


State 10

    3 root_program: root_program external_declaration .

    $default  reduce using rule 3 (root_program)


State 11

   14 declaration: type_specifier SEMICOLON .

    $default  reduce using rule 14 (declaration)


State 12

    6 function_definition: type_specifier NAME . T_LBRACKET T_RBRACKET compound_statement
    7                    | type_specifier NAME . T_LBRACKET parameter_list T_RBRACKET compound_statement
    9 initialisation_declarator: NAME . T_ASSIGN assignment_expression
   12 declarator: NAME .
   13           | NAME . SQU_LBRACKET add_expression SQU_RBRACKET

    T_ASSIGN      shift, and go to state 15
    T_LBRACKET    shift, and go to state 16
    SQU_LBRACKET  shift, and go to state 17

    $default  reduce using rule 12 (declarator)


State 13

   15 declaration: type_specifier initialisation_declarator . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 14

    8 initialisation_declarator: declarator .

    $default  reduce using rule 8 (initialisation_declarator)


State 15

    9 initialisation_declarator: NAME T_ASSIGN . assignment_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression     go to state 22
    postfix_expression     go to state 23
    add_expression         go to state 24
    multiply_expression    go to state 25
    shift_expression       go to state 26
    compare_expression     go to state 27
    equal_expression       go to state 28
    bitwise_expression     go to state 29
    logical_expression     go to state 30
    assignment_expression  go to state 31


State 16

    6 function_definition: type_specifier NAME T_LBRACKET . T_RBRACKET compound_statement
    7                    | type_specifier NAME T_LBRACKET . parameter_list T_RBRACKET compound_statement

    T_RBRACKET  shift, and go to state 32
    T_INT       shift, and go to state 1
    T_UNSIGNED  shift, and go to state 2

    parameter_declaration  go to state 33
    parameter_list         go to state 34
    type_specifier         go to state 35


State 17

   13 declarator: NAME SQU_LBRACKET . add_expression SQU_RBRACKET

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 37
    multiply_expression  go to state 25


State 18

   15 declaration: type_specifier initialisation_declarator SEMICOLON .

    $default  reduce using rule 15 (declaration)


State 19

   24 primary_expression: T_LBRACKET . expression T_RBRACKET

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression     go to state 22
    postfix_expression     go to state 23
    add_expression         go to state 24
    multiply_expression    go to state 25
    shift_expression       go to state 26
    compare_expression     go to state 27
    equal_expression       go to state 28
    bitwise_expression     go to state 29
    logical_expression     go to state 30
    assignment_expression  go to state 38
    expression             go to state 39


State 20

   22 primary_expression: NAME .
   23                   | NAME . SQU_LBRACKET expression SQU_RBRACKET
   25                   | NAME . T_LBRACKET T_RBRACKET
   26                   | NAME . T_LBRACKET function_call_arguments T_RBRACKET

    T_LBRACKET    shift, and go to state 40
    SQU_LBRACKET  shift, and go to state 41

    $default  reduce using rule 22 (primary_expression)


State 21

   21 primary_expression: NUMBER .

    $default  reduce using rule 21 (primary_expression)


State 22

   27 postfix_expression: primary_expression .

    $default  reduce using rule 27 (postfix_expression)


State 23

   28 postfix_expression: postfix_expression . INC_OP
   32 multiply_expression: postfix_expression .
   54 assignment_expression: postfix_expression . T_ASSIGN assignment_expression

    T_ASSIGN  shift, and go to state 42
    INC_OP    shift, and go to state 43

    $default  reduce using rule 32 (multiply_expression)


State 24

   30 add_expression: add_expression . T_PLUS multiply_expression
   31               | add_expression . T_MINUS multiply_expression
   35 shift_expression: add_expression .

    T_PLUS   shift, and go to state 44
    T_MINUS  shift, and go to state 45

    $default  reduce using rule 35 (shift_expression)


State 25

   29 add_expression: multiply_expression .
   33 multiply_expression: multiply_expression . T_TIMES postfix_expression
   34                    | multiply_expression . T_DIVIDE postfix_expression

    T_TIMES   shift, and go to state 46
    T_DIVIDE  shift, and go to state 47

    $default  reduce using rule 29 (add_expression)


State 26

   36 shift_expression: shift_expression . T_LEFT_SHIFT add_expression
   37                 | shift_expression . T_RIGHT_SHIFT add_expression
   38 compare_expression: shift_expression .

    T_RIGHT_SHIFT  shift, and go to state 48
    T_LEFT_SHIFT   shift, and go to state 49

    $default  reduce using rule 38 (compare_expression)


State 27

   39 compare_expression: compare_expression . T_LESSTHAN shift_expression
   40                   | compare_expression . T_LESS_EQUAL shift_expression
   41                   | compare_expression . T_GREATERTHAN shift_expression
   42                   | compare_expression . T_GREATER_EQUAL shift_expression
   43 equal_expression: compare_expression .

    T_LESSTHAN       shift, and go to state 50
    T_GREATERTHAN    shift, and go to state 51
    T_LESS_EQUAL     shift, and go to state 52
    T_GREATER_EQUAL  shift, and go to state 53

    $default  reduce using rule 43 (equal_expression)


State 28

   44 equal_expression: equal_expression . T_EQUAL compare_expression
   45                 | equal_expression . T_NOT_EQUAL compare_expression
   46 bitwise_expression: equal_expression .

    T_EQUAL      shift, and go to state 54
    T_NOT_EQUAL  shift, and go to state 55

    $default  reduce using rule 46 (bitwise_expression)


State 29

   47 bitwise_expression: bitwise_expression . T_BIT_AND equal_expression
   48                   | bitwise_expression . T_BIT_OR equal_expression
   49                   | bitwise_expression . T_BIT_XOR equal_expression
   50 logical_expression: bitwise_expression .

    T_BIT_AND  shift, and go to state 56
    T_BIT_OR   shift, and go to state 57
    T_BIT_XOR  shift, and go to state 58

    $default  reduce using rule 50 (logical_expression)


State 30

   51 logical_expression: logical_expression . T_LOGICAL_AND bitwise_expression
   52                   | logical_expression . T_LOGICAL_OR bitwise_expression
   53 assignment_expression: logical_expression .

    T_LOGICAL_OR   shift, and go to state 59
    T_LOGICAL_AND  shift, and go to state 60

    $default  reduce using rule 53 (assignment_expression)


State 31

    9 initialisation_declarator: NAME T_ASSIGN assignment_expression .

    $default  reduce using rule 9 (initialisation_declarator)


State 32

    6 function_definition: type_specifier NAME T_LBRACKET T_RBRACKET . compound_statement

    CUR_LBRACKET  shift, and go to state 61

    compound_statement  go to state 62


State 33

   17 parameter_list: parameter_declaration .

    $default  reduce using rule 17 (parameter_list)


State 34

    7 function_definition: type_specifier NAME T_LBRACKET parameter_list . T_RBRACKET compound_statement
   18 parameter_list: parameter_list . COMMA parameter_declaration

    T_RBRACKET  shift, and go to state 63
    COMMA       shift, and go to state 64


State 35

   16 parameter_declaration: type_specifier . declarator

    NAME  shift, and go to state 65

    declarator  go to state 66


State 36

   28 postfix_expression: postfix_expression . INC_OP
   32 multiply_expression: postfix_expression .

    INC_OP  shift, and go to state 43

    $default  reduce using rule 32 (multiply_expression)


State 37

   13 declarator: NAME SQU_LBRACKET add_expression . SQU_RBRACKET
   30 add_expression: add_expression . T_PLUS multiply_expression
   31               | add_expression . T_MINUS multiply_expression

    T_PLUS        shift, and go to state 44
    T_MINUS       shift, and go to state 45
    SQU_RBRACKET  shift, and go to state 67


State 38

   55 expression: assignment_expression .

    $default  reduce using rule 55 (expression)


State 39

   24 primary_expression: T_LBRACKET expression . T_RBRACKET

    T_RBRACKET  shift, and go to state 68


State 40

   25 primary_expression: NAME T_LBRACKET . T_RBRACKET
   26                   | NAME T_LBRACKET . function_call_arguments T_RBRACKET

    T_RBRACKET  shift, and go to state 69
    NUMBER      shift, and go to state 70

    function_call_arguments  go to state 71


State 41

   23 primary_expression: NAME SQU_LBRACKET . expression SQU_RBRACKET

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression     go to state 22
    postfix_expression     go to state 23
    add_expression         go to state 24
    multiply_expression    go to state 25
    shift_expression       go to state 26
    compare_expression     go to state 27
    equal_expression       go to state 28
    bitwise_expression     go to state 29
    logical_expression     go to state 30
    assignment_expression  go to state 38
    expression             go to state 72


State 42

   54 assignment_expression: postfix_expression T_ASSIGN . assignment_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression     go to state 22
    postfix_expression     go to state 23
    add_expression         go to state 24
    multiply_expression    go to state 25
    shift_expression       go to state 26
    compare_expression     go to state 27
    equal_expression       go to state 28
    bitwise_expression     go to state 29
    logical_expression     go to state 30
    assignment_expression  go to state 73


State 43

   28 postfix_expression: postfix_expression INC_OP .

    $default  reduce using rule 28 (postfix_expression)


State 44

   30 add_expression: add_expression T_PLUS . multiply_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    multiply_expression  go to state 74


State 45

   31 add_expression: add_expression T_MINUS . multiply_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    multiply_expression  go to state 75


State 46

   33 multiply_expression: multiply_expression T_TIMES . postfix_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression  go to state 22
    postfix_expression  go to state 76


State 47

   34 multiply_expression: multiply_expression T_DIVIDE . postfix_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression  go to state 22
    postfix_expression  go to state 77


State 48

   37 shift_expression: shift_expression T_RIGHT_SHIFT . add_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 78
    multiply_expression  go to state 25


State 49

   36 shift_expression: shift_expression T_LEFT_SHIFT . add_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 79
    multiply_expression  go to state 25


State 50

   39 compare_expression: compare_expression T_LESSTHAN . shift_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 80


State 51

   41 compare_expression: compare_expression T_GREATERTHAN . shift_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 81


State 52

   40 compare_expression: compare_expression T_LESS_EQUAL . shift_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 82


State 53

   42 compare_expression: compare_expression T_GREATER_EQUAL . shift_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 83


State 54

   44 equal_expression: equal_expression T_EQUAL . compare_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 26
    compare_expression   go to state 84


State 55

   45 equal_expression: equal_expression T_NOT_EQUAL . compare_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 26
    compare_expression   go to state 85


State 56

   47 bitwise_expression: bitwise_expression T_BIT_AND . equal_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 26
    compare_expression   go to state 27
    equal_expression     go to state 86


State 57

   48 bitwise_expression: bitwise_expression T_BIT_OR . equal_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 26
    compare_expression   go to state 27
    equal_expression     go to state 87


State 58

   49 bitwise_expression: bitwise_expression T_BIT_XOR . equal_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 26
    compare_expression   go to state 27
    equal_expression     go to state 88


State 59

   52 logical_expression: logical_expression T_LOGICAL_OR . bitwise_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 26
    compare_expression   go to state 27
    equal_expression     go to state 28
    bitwise_expression   go to state 89


State 60

   51 logical_expression: logical_expression T_LOGICAL_AND . bitwise_expression

    T_LBRACKET  shift, and go to state 19
    NAME        shift, and go to state 20
    NUMBER      shift, and go to state 21

    primary_expression   go to state 22
    postfix_expression   go to state 36
    add_expression       go to state 24
    multiply_expression  go to state 25
    shift_expression     go to state 26
    compare_expression   go to state 27
    equal_expression     go to state 28
    bitwise_expression   go to state 90


State 61

   63 compound_statement: CUR_LBRACKET . CUR_RBRACKET
   64                   | CUR_LBRACKET . statement_list CUR_RBRACKET
   65                   | CUR_LBRACKET . declaration_list CUR_RBRACKET
   66                   | CUR_LBRACKET . declaration_list statement_list CUR_RBRACKET

    T_LBRACKET    shift, and go to state 19
    CUR_LBRACKET  shift, and go to state 61
    CUR_RBRACKET  shift, and go to state 91
    T_INT         shift, and go to state 1
    T_UNSIGNED    shift, and go to state 2
    T_IF          shift, and go to state 92
    T_WHILE       shift, and go to state 93
    T_RETURN      shift, and go to state 94
    T_FOR         shift, and go to state 95
    NAME          shift, and go to state 20
    NUMBER        shift, and go to state 21

    declaration_list       go to state 96
    declaration            go to state 97
    primary_expression     go to state 22
    postfix_expression     go to state 23
    add_expression         go to state 24
    multiply_expression    go to state 25
    shift_expression       go to state 26
    compare_expression     go to state 27
    equal_expression       go to state 28
    bitwise_expression     go to state 29
    logical_expression     go to state 30
    assignment_expression  go to state 38
    expression             go to state 98
    statement              go to state 99
    statement_list         go to state 100
    compound_statement     go to state 101
    jump_statement         go to state 102
    expression_statement   go to state 103
    condition_statement    go to state 104
    iteration_statement    go to state 105
    type_specifier         go to state 106


State 62

    6 function_definition: type_specifier NAME T_LBRACKET T_RBRACKET compound_statement .

    $default  reduce using rule 6 (function_definition)


State 63

    7 function_definition: type_specifier NAME T_LBRACKET parameter_list T_RBRACKET . compound_statement

    CUR_LBRACKET  shift, and go to state 61

    compound_statement  go to state 107


State 64

   18 parameter_list: parameter_list COMMA . parameter_declaration

    T_INT       shift, and go to state 1
    T_UNSIGNED  shift, and go to state 2

    parameter_declaration  go to state 108
    type_specifier         go to state 35


State 65

   12 declarator: NAME .
   13           | NAME . SQU_LBRACKET add_expression SQU_RBRACKET

    SQU_LBRACKET  shift, and go to state 17

    $default  reduce using rule 12 (declarator)


State 66

   16 parameter_declaration: type_specifier declarator .

    $default  reduce using rule 16 (parameter_declaration)


State 67

   13 declarator: NAME SQU_LBRACKET add_expression SQU_RBRACKET .

    $default  reduce using rule 13 (declarator)


State 68

   24 primary_expression: T_LBRACKET expression T_RBRACKET .

    $default  reduce using rule 24 (primary_expression)


State 69

   25 primary_expression: NAME T_LBRACKET T_RBRACKET .

    $default  reduce using rule 25 (primary_expression)


State 70

   19 function_call_arguments: NUMBER .

    $default  reduce using rule 19 (function_call_arguments)


State 71

   20 function_call_arguments: function_call_arguments . COMMA NUMBER
   26 primary_expression: NAME T_LBRACKET function_call_arguments . T_RBRACKET

    T_RBRACKET  shift, and go to state 109
    COMMA       shift, and go to state 110


State 72

   23 primary_expression: NAME SQU_LBRACKET expression . SQU_RBRACKET

    SQU_RBRACKET  shift, and go to state 111


State 73

   54 assignment_expression: postfix_expression T_ASSIGN assignment_expression .

    $default  reduce using rule 54 (assignment_expression)


State 74

   30 add_expression: add_expression T_PLUS multiply_expression .
   33 multiply_expression: multiply_expression . T_TIMES postfix_expression
   34                    | multiply_expression . T_DIVIDE postfix_expression

    T_TIMES   shift, and go to state 46
    T_DIVIDE  shift, and go to state 47

    $default  reduce using rule 30 (add_expression)


State 75

   31 add_expression: add_expression T_MINUS multiply_expression .
   33 multiply_expression: multiply_expression . T_TIMES postfix_expression
   34                    | multiply_expression . T_DIVIDE postfix_expression

    T_TIMES   shift, and go to state 46
    T_DIVIDE  shift, and go to state 47

    $default  reduce using rule 31 (add_expression)


State 76

   28 postfix_expression: postfix_expression . INC_OP
   33 multiply_expression: multiply_expression T_TIMES postfix_expression .

    INC_OP  shift, and go to state 43

    $default  reduce using rule 33 (multiply_expression)


State 77

   28 postfix_expression: postfix_expression . INC_OP
   34 multiply_expression: multiply_expression T_DIVIDE postfix_expression .

    INC_OP  shift, and go to state 43

    $default  reduce using rule 34 (multiply_expression)


State 78

   30 add_expression: add_expression . T_PLUS multiply_expression
   31               | add_expression . T_MINUS multiply_expression
   37 shift_expression: shift_expression T_RIGHT_SHIFT add_expression .

    T_PLUS   shift, and go to state 44
    T_MINUS  shift, and go to state 45

    $default  reduce using rule 37 (shift_expression)


State 79

   30 add_expression: add_expression . T_PLUS multiply_expression
   31               | add_expression . T_MINUS multiply_expression
   36 shift_expression: shift_expression T_LEFT_SHIFT add_expression .

    T_PLUS   shift, and go to state 44
    T_MINUS  shift, and go to state 45

    $default  reduce using rule 36 (shift_expression)


State 80

   36 shift_expression: shift_expression . T_LEFT_SHIFT add_expression
   37                 | shift_expression . T_RIGHT_SHIFT add_expression
   39 compare_expression: compare_expression T_LESSTHAN shift_expression .

    T_RIGHT_SHIFT  shift, and go to state 48
    T_LEFT_SHIFT   shift, and go to state 49

    $default  reduce using rule 39 (compare_expression)


State 81

   36 shift_expression: shift_expression . T_LEFT_SHIFT add_expression
   37                 | shift_expression . T_RIGHT_SHIFT add_expression
   41 compare_expression: compare_expression T_GREATERTHAN shift_expression .

    T_RIGHT_SHIFT  shift, and go to state 48
    T_LEFT_SHIFT   shift, and go to state 49

    $default  reduce using rule 41 (compare_expression)


State 82

   36 shift_expression: shift_expression . T_LEFT_SHIFT add_expression
   37                 | shift_expression . T_RIGHT_SHIFT add_expression
   40 compare_expression: compare_expression T_LESS_EQUAL shift_expression .

    T_RIGHT_SHIFT  shift, and go to state 48
    T_LEFT_SHIFT   shift, and go to state 49

    $default  reduce using rule 40 (compare_expression)


State 83

   36 shift_expression: shift_expression . T_LEFT_SHIFT add_expression
   37                 | shift_expression . T_RIGHT_SHIFT add_expression
   42 compare_expression: compare_expression T_GREATER_EQUAL shift_expression .

    T_RIGHT_SHIFT  shift, and go to state 48
    T_LEFT_SHIFT   shift, and go to state 49

    $default  reduce using rule 42 (compare_expression)


State 84

   39 compare_expression: compare_expression . T_LESSTHAN shift_expression
   40                   | compare_expression . T_LESS_EQUAL shift_expression
   41                   | compare_expression . T_GREATERTHAN shift_expression
   42                   | compare_expression . T_GREATER_EQUAL shift_expression
   44 equal_expression: equal_expression T_EQUAL compare_expression .

    T_LESSTHAN       shift, and go to state 50
    T_GREATERTHAN    shift, and go to state 51
    T_LESS_EQUAL     shift, and go to state 52
    T_GREATER_EQUAL  shift, and go to state 53

    $default  reduce using rule 44 (equal_expression)


State 85

   39 compare_expression: compare_expression . T_LESSTHAN shift_expression
   40                   | compare_expression . T_LESS_EQUAL shift_expression
   41                   | compare_expression . T_GREATERTHAN shift_expression
   42                   | compare_expression . T_GREATER_EQUAL shift_expression
   45 equal_expression: equal_expression T_NOT_EQUAL compare_expression .

    T_LESSTHAN       shift, and go to state 50
    T_GREATERTHAN    shift, and go to state 51
    T_LESS_EQUAL     shift, and go to state 52
    T_GREATER_EQUAL  shift, and go to state 53

    $default  reduce using rule 45 (equal_expression)


State 86

   44 equal_expression: equal_expression . T_EQUAL compare_expression
   45                 | equal_expression . T_NOT_EQUAL compare_expression
   47 bitwise_expression: bitwise_expression T_BIT_AND equal_expression .

    T_EQUAL      shift, and go to state 54
    T_NOT_EQUAL  shift, and go to state 55

    $default  reduce using rule 47 (bitwise_expression)


State 87

   44 equal_expression: equal_expression . T_EQUAL compare_expression
   45                 | equal_expression . T_NOT_EQUAL compare_expression
   48 bitwise_expression: bitwise_expression T_BIT_OR equal_expression .

    T_EQUAL      shift, and go to state 54
    T_NOT_EQUAL  shift, and go to state 55

    $default  reduce using rule 48 (bitwise_expression)


State 88

   44 equal_expression: equal_expression . T_EQUAL compare_expression
   45                 | equal_expression . T_NOT_EQUAL compare_expression
   49 bitwise_expression: bitwise_expression T_BIT_XOR equal_expression .

    T_EQUAL      shift, and go to state 54
    T_NOT_EQUAL  shift, and go to state 55

    $default  reduce using rule 49 (bitwise_expression)


State 89
